test(GameOfLife): fixed tests that fail because the birth rule was ignored previously